[gd_scene load_steps=21 format=3 uid="uid://h2d7jnxcsmt1"]

[ext_resource type="Script" path="res://res/scripts/Player.gd" id="1_iprhw"]
[ext_resource type="Script" path="res://res/scripts/cameraScript.gd" id="2_xafiq"]
[ext_resource type="PackedScene" uid="uid://eofdb4gtnsvk" path="res://res/Scenes/Player/handCannon.tscn" id="3_anlf3"]
[ext_resource type="PackedScene" uid="uid://didk0crxigacv" path="res://res/Scenes/Player/judge_revolver.tscn" id="5_xufo1"]
[ext_resource type="PackedScene" uid="uid://degnrq8am8gbv" path="res://res/Scenes/Player/glassCannon.tscn" id="6_3lc7l"]
[ext_resource type="PackedScene" uid="uid://b2q8vn05nkxu8" path="res://res/Scenes/Player/HUD.tscn" id="6_nnyey"]
[ext_resource type="PackedScene" uid="uid://c4owva3kxuo4" path="res://res/Scenes/Player/rifle.tscn" id="6_tjkpo"]
[ext_resource type="PackedScene" uid="uid://dfa4hrsqtrg6h" path="res://res/Scenes/Player/DBShotgun.tscn" id="7_3ij0t"]
[ext_resource type="PackedScene" uid="uid://c3mexgrhb6joy" path="res://res/Scenes/Menus/pause_menu.tscn" id="9_2agqc"]
[ext_resource type="AudioStream" uid="uid://digtj4b6hppyu" path="res://res/sfx/player/DoubleJumpSFX.wav" id="10_qqq2w"]
[ext_resource type="AudioStream" uid="uid://bid3phi2exo5k" path="res://res/sfx/player/WalkSFX.wav" id="11_4p6up"]
[ext_resource type="AudioStream" uid="uid://chtuwyo60qu2l" path="res://res/sfx/player/GroundLand_SFX.wav" id="12_4mu3e"]
[ext_resource type="AudioStream" uid="uid://crha4blily4fb" path="res://res/sfx/player/JumpSFX.wav" id="13_rb1nd"]
[ext_resource type="AudioStream" uid="uid://d00thuha2cnvw" path="res://res/sfx/player/playerDeathSFX.wav" id="14_u2ngv"]
[ext_resource type="AudioStream" uid="uid://t1v2y6iniyw0" path="res://res/sfx/player/ultReady.wav" id="15_htwh3"]
[ext_resource type="AudioStream" uid="uid://xifhyaqbgtbu" path="res://res/sfx/player/playerGrunt.wav" id="16_2mpwe"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_clreo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k54xs"]
radius = 0.4

[sub_resource type="Animation" id="Animation_o3rft"]
resource_name = "deathAnimation"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playerHead:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.2, 0), Vector3(0, 0.1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerHead:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -1.5708)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1ir0"]
_data = {
"deathAnimation": SubResource("Animation_o3rft")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_iprhw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_clreo")
skeleton = NodePath("")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CapsuleShape3D_k54xs")

[node name="playerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="Camera3D" type="Camera3D" parent="playerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
fov = 90.0
near = 0.001
script = ExtResource("2_xafiq")

[node name="Pistol" parent="playerHead/Camera3D" instance=ExtResource("3_anlf3")]
process_priority = 10
transform = Transform3D(0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0.0601814, -0.0491836, -0.122674)

[node name="JudgeRevolverRoot" parent="playerHead/Camera3D" instance=ExtResource("5_xufo1")]
transform = Transform3D(-3.0598e-09, 0, 0.07, 0, 0.07, 0, -0.07, 0, -3.0598e-09, 0.0588016, -0.0730828, -0.0612705)
visible = false

[node name="RifleNode" parent="playerHead/Camera3D" instance=ExtResource("6_tjkpo")]
transform = Transform3D(-2.18557e-09, 0, 0.05, 0, 0.05, 0, -0.05, 0, -2.18557e-09, 0.0590415, -0.0801282, -0.0480065)
visible = false

[node name="hitscanRayCast" type="RayCast3D" parent="playerHead/Camera3D"]
transform = Transform3D(0.1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, -0.05, 0)
target_position = Vector3(0, 0, -10000)
collision_mask = 5
collide_with_areas = true
collide_with_bodies = false
debug_shape_thickness = 1

[node name="raycastEnd" type="Node3D" parent="playerHead/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10000)

[node name="GlassCannon" parent="playerHead/Camera3D" instance=ExtResource("6_3lc7l")]
transform = Transform3D(-2.62268e-09, 0, 0.06, 0, 0.06, 0, -0.06, 0, -2.62268e-09, 0.0596254, -0.0700078, -0.111453)
visible = false

[node name="DBShotgun" parent="playerHead/Camera3D" instance=ExtResource("7_3ij0t")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0210356, -0.0304438, -0.020823)
visible = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerHUD" parent="HUD" instance=ExtResource("6_nnyey")]
visible = false

[node name="PauseMenu" parent="HUD" instance=ExtResource("9_2agqc")]
process_mode = 3
visible = false

[node name="DoubleJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qqq2w")
volume_db = 5.0
bus = &"PlayerSFX"

[node name="DashSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qqq2w")
volume_db = 2.0
pitch_scale = 1.2
bus = &"PlayerSFX"

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_4p6up")
volume_db = 3.0
pitch_scale = 1.6
bus = &"PlayerSFX"

[node name="Jump_LandSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_4mu3e")
volume_db = 2.0
bus = &"PlayerSFX"

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_rb1nd")
pitch_scale = 1.2
bus = &"PlayerSFX"

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_u2ngv")
volume_db = 0.5
pitch_scale = 0.9
bus = &"PlayerSFX"

[node name="UltReadySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_htwh3")
volume_db = 3.0
max_polyphony = 5
bus = &"PlayerSFX"

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_2mpwe")
max_polyphony = 10
bus = &"PlayerSFX"

[node name="noLadder" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ultimateChargeTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m1ir0")
}

[connection signal="timeout" from="ultimateChargeTimer" to="." method="_on_ultimate_charge_timer_timeout"]
